// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video is not playing  1`] = `
<div
  className="player-interface"
>
  <div
    className="player-interface__progress-bar-container"
  >
    <div
      className="player-interface__progress-bar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="player-interface__navigation-wrapper"
  >
    <button
      className="player-interface__navigation-control selected"
    >
      <img
        alt="left"
        className="player-interface__navigation-icons"
        id="1"
        src="RW.svg"
      />
    </button>
    <button
      className="player-interface__navigation-control"
    >
      <img
        alt="Play/Pause"
        className="player-interface__navigation-icons"
        id="2"
        src="Play.svg"
      />
    </button>
    <button
      className="player-interface__navigation-control"
    >
      <img
        alt="right"
        className="player-interface__navigation-icons"
        id="3"
        src="FF.svg"
      />
    </button>
  </div>
</div>
`;

exports[`Video is playing + selected postition is 0 1`] = `
<div
  className="player-interface"
>
  <div
    className="player-interface__progress-bar-container"
  >
    <div
      className="player-interface__progress-bar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="player-interface__navigation-wrapper"
  >
    <button
      className="player-interface__navigation-control selected"
    >
      <img
        alt="left"
        className="player-interface__navigation-icons"
        id="1"
        src="RW.svg"
      />
    </button>
    <button
      className="player-interface__navigation-control"
    >
      <img
        alt="Play/Pause"
        className="player-interface__navigation-icons"
        id="2"
        src="Pause.svg"
      />
    </button>
    <button
      className="player-interface__navigation-control"
    >
      <img
        alt="right"
        className="player-interface__navigation-icons"
        id="3"
        src="FF.svg"
      />
    </button>
  </div>
</div>
`;

exports[`Video is playing + selected postition is 1 1`] = `
<div
  className="player-interface"
>
  <div
    className="player-interface__progress-bar-container"
  >
    <div
      className="player-interface__progress-bar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="player-interface__navigation-wrapper"
  >
    <button
      className="player-interface__navigation-control"
    >
      <img
        alt="left"
        className="player-interface__navigation-icons"
        id="1"
        src="RW.svg"
      />
    </button>
    <button
      className="player-interface__navigation-control selected"
    >
      <img
        alt="Play/Pause"
        className="player-interface__navigation-icons"
        id="2"
        src="Pause.svg"
      />
    </button>
    <button
      className="player-interface__navigation-control"
    >
      <img
        alt="right"
        className="player-interface__navigation-icons"
        id="3"
        src="FF.svg"
      />
    </button>
  </div>
</div>
`;

exports[`Video is playing + selected postition is 2 1`] = `
<div
  className="player-interface"
>
  <div
    className="player-interface__progress-bar-container"
  >
    <div
      className="player-interface__progress-bar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="player-interface__navigation-wrapper"
  >
    <button
      className="player-interface__navigation-control"
    >
      <img
        alt="left"
        className="player-interface__navigation-icons"
        id="1"
        src="RW.svg"
      />
    </button>
    <button
      className="player-interface__navigation-control"
    >
      <img
        alt="Play/Pause"
        className="player-interface__navigation-icons"
        id="2"
        src="Pause.svg"
      />
    </button>
    <button
      className="player-interface__navigation-control selected"
    >
      <img
        alt="right"
        className="player-interface__navigation-icons"
        id="3"
        src="FF.svg"
      />
    </button>
  </div>
</div>
`;
